# bayesian-glm-count-data

./: .gitignore  .nojekyll  BACKLOG.md  BITACORA.md  CLAUDE_OPS.md  README.md  _quarto.yml  briefing_minicurso_glm_claude_code.md  index.html  index.qmd  pyproject.toml  requirements.txt  search.json
.github/workflows/: publish.yml
_freeze/notebooks/00_introduccion/execute-results/: html.json
_freeze/notebooks/01_basic_eda/execute-results/: html.json
_freeze/notebooks/01_eda_frecuentista/execute-results/: html.json
_freeze/notebooks/01b_extended/execute-results/: html.json
models/: negative_binomial_model.stan  poisson_model.stan  zinb_model.stan  zip_model.stan
notebooks/: 00_introduccion.html  00_introduccion.ipynb  01_basic_eda.html  01_basic_eda.ipynb  01_eda_frecuentista.html  01_eda_frecuentista.ipynb  01b_eda_general.html  01b_eda_general.ipynb  01b_extended.html  01b_extended.ipynb  02_mle_datos_simulados.html  02_mle_datos_simulados.ipynb  02_mle_theory.html  02_mle_theory.ipynb  02_simulacion_distribucion.ipynb  03_bayesian_inference.html  03_bayesian_inference.ipynb  03_inferencia_bayesiana.html  03_inferencia_bayesiana.ipynb  04_diagnosticos_estudio.ipynb  04_predictive_checks_base_models.html  04_predictive_checks_base_models.ipynb  05_extended_models.html  05_extended_models.ipynb  05_ppc_sobredispersion.ipynb  05_predictive_checks_extended_models.html  05_predictive_checks_extended_models.ipynb
scripts/: poisson_reg_manual_optimization.py  poisson_reg_simple_example.py
site_libs/bootstrap/: bootstrap-a672264d6ced0d2e61b1449019ffc00b.min.css
(+7 files in other folders)
