[project]
name = "bayesian-glm-count-data"
version = "0.1.0"
description = "Bayesian workflow incremental para regresiones de datos de conteo (GLMs y extensiones)"
requires-python = ">=3.11.14"
dependencies = [
    "arviz>=0.23.4",
    "cmdstanpy>=1.3.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "xarray>=2026.2.0",
]
